# backend

./: .env.example  .gitignore  BIORXIV_S3_NOTES.md  README.md  claim_verification.db  deploy.sh  load_cllm_data.py  pyproject.toml
.github/workflows/: deploy.yml
app/: auth.py  config.py  database.py  db_init.py  db_loader.py  db_queries.py  dependencies.py  ingest_manuscripts.py  main.py  migrations.py  models.py  schema.py
app/routers/: api.py  auth.py  manuscripts.py  search.py  submissions.py
app/services/: biorxiv.py  concordance.prompt.txt  db_helpers_v2.py  db_helpers_v3.py  extract.prompt.txt  jats_parser.py  llm_eval.prompt.txt  pdf_extractor.py  peer_eval.prompt.txt  s3_fetcher.py  s3_index.py  text_utils.py  verification.py  verification_v2.py  verification_v2_complete.txt  verification_v3.py
scripts/: deploy.sh  embed_claims.py  migrate_add_abstract.py  migrate_add_embeddings.py  migrate_add_pub_date.py
