[project]
name = "backend"
version = "0.1.0"
description = "Claim Verification System Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "pydantic>=2.9.0",
    "anthropic>=0.39.0",
    "pypdf>=5.1.0",
    "requests>=2.32.0",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.6.0",
    "boto3>=1.35.0",
    "lxml>=5.0.0",
]
